tests/expected_package_private_proof_field_access.diag.out
<input2>:3:5: error: field 'count' is private
        pkg_proof_private_field_source::mint().count
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
